--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "morgan": "^1.10.0",
-    "pg":"8.16.0"
+    "pg":"8.11.3",
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
