--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,15 @@ services:
   db:
     image: postgres:15
     environment:
+      POSTGRES_HOST: ${DB_HOST}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_USER: ${DB_USER}
       POSTGRES_DB: ${DB_DATABASE}
       POSTGRES_PORT: ${DB_PORT}
     volumes:
       - ./src/database/init.sql:/docker-entrypoint-initdb.d/init.sql
+    ports:
+      - "5432:5432"
 
   api:
     build: .
@@ -19,4 +22,9 @@ services:
     environment:
       - NODE_ENV=development
       - PORT=3000
+      - PGUSER=${DB_USER}         
+      - PGPASSWORD=${DB_PASSWORD}
+      - PGDATABASE=${DB_DATABASE}
+      - PGHOST=${DB_HOST}
+      - PGPORT=${DB_PORT}
     command: npm run dev
