--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "axios": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "morgan": "^1.10.0",
-    "pg":"8.11.3",
-    "express-validator": "^7.0.1"
+    "pg": "8.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
