--- a/MecanicosApp/package.json
+++ b/MecanicosApp/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.9.0",
     "react": "19.0.0",
     "react-native": "0.79.2"
