--- a/MecanicosApp/package.json
+++ b/MecanicosApp/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.9.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-keychain": "^10.0.0",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-vector-icons": "^10.2.0"
   },
