--- a/MecanicosApp/package.json
+++ b/MecanicosApp/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/drawer": "^7.4.1",
     "@react-navigation/native": "^7.1.10",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.9.0",
+    "jwt-decode": "^4.0.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-keychain": "^10.0.0",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-keychain": "^10.0.0",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
